--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Come</title>
+    <link rel="stylesheet" href="styles/mobile.css">
+    <title>MóKino</title>
 </head>
 <body>
     <header>
@@ -12,12 +13,15 @@
             <i class="bi bi-circle-square"></i>
             <h1>MóKino</h1>
         </div>
+        <div class="openMenu">
+            <i class="bi bi-justify"></i>
+        </div>
         <div class="menu">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#menu-kino">Menu</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#conctato">Contacto</a></li>
             </ul>
         </div>
     </header>
@@ -102,7 +106,7 @@
             </div>
         </div>
     </div>
-    <div class="contacto">
+    <div class="contacto" id="conctato">
         <div class="titulo-contacto">
             Contactos
         </div>
