--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/mobile.css">
+    
     <title>MóKino</title>
 </head>
 <body>
@@ -136,5 +137,8 @@
     <footer>
         <div>Todos Direitos Reservados © <span>Alexandre Sampaio</span> 2025</div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
+   
 </body>
 </html>
